--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@strapi/plugin-documentation": "^4.9.2",
     "@strapi/plugin-graphql": "4.9.2",
     "@strapi/plugin-i18n": "4.9.2",
+    "@strapi/plugin-seo": "^1.8.0",
     "@strapi/plugin-users-permissions": "4.9.2",
     "@strapi/strapi": "4.9.2",
-    "better-sqlite3": "8.0.1"
+    "better-sqlite3": "8.0.1",
+    "strapi-plugin-entity-relationship-chart": "^4.1.0",
+    "strapi-plugin-graphs-builder": "^1.0.0",
+    "strapi-plugin-translate": "^1.1.3"
   },
   "author": {
     "name": "Minh Tran"
