--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.1.0",
   "description": "PAMA SEO Application",
   "scripts": {
-    "develop": "strapi develop",
-    "dev": "strapi build develop",
+    "dev": "strapi develop",
+    "build-dev": "strapi build develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "watch-admin": "strapi develop --watch-admin"
+
   },
   "devDependencies": {},
   "dependencies": {
@@ -21,10 +23,10 @@
     "@strapi/strapi": "4.9.2",
     "better-sqlite3": "8.0.1",
     "pg": "^8.10.0",
-    "pg-connection-string": "^2.5.0",
     "strapi-plugin-entity-relationship-chart": "^4.1.0",
     "strapi-plugin-graphs-builder": "^1.0.0",
     "strapi-plugin-import-export-entries": "^1.19.1",
+    "strapi-plugin-slugify": "^2.3.2",
     "strapi-plugin-translate": "^1.1.3"
   },
   "author": {
