--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "build": "strapi build",
     "strapi": "strapi",
     "watch-admin": "strapi develop --watch-admin"
-
   },
   "devDependencies": {},
   "dependencies": {
@@ -27,7 +26,8 @@
     "strapi-plugin-graphs-builder": "^1.0.0",
     "strapi-plugin-import-export-entries": "^1.19.1",
     "strapi-plugin-slugify": "^2.3.2",
-    "strapi-plugin-translate": "^1.1.3"
+    "strapi-plugin-translate": "^1.1.3",
+    "strapi-prometheus": "^1.5.0"
   },
   "author": {
     "name": "Minh Tran"
